Bug Fix | Utilities | Flex spacing

--- a/src/bundles/wsu-design-system.utilities.scss
+++ b/src/bundles/wsu-design-system.utilities.scss
@@ -18,7 +18,7 @@
             flex-basis: 1 0 auto;
         }
 
-        .wsu-flex--spacing {
+        &.wsu-flex--spacing {
 
             &-medium {
                 width: calc( 50% - ( #{$wsu-spacing--medium}/ 2 ) );
